--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div id="id4167f8d5860c6" a='{"t":"r","v":"1.2","lang":"en","locs":[462],"ssot":"c","sics":"ms","cbkg":"#FFFFFF00","cfnt":"rgba(255,255,255,1)","codd":"#FFFFFF00","cont":"rgba(255,255,255,0.8313725490196079)","stof":"5"}'>Weather Data Source: <a href="https://sharpweather.com/weather_zagreb/30_days/">weather Zagreb 30 days</a></div><script async src="https://static1.sharpweather.com/widgetjs/?id=id4167f8d5860c6"></script>
     Weather block Ends -->
 
+<div id="ida217467359a5c" a='{"t":"r","v":"1.2","lang":"en","locs":[702],"ssot":"c","sics":"ds","cbkg":"rgb(69,90,100)","cfnt":"#FFFFFF","codd":"rgb(84,110,122)","cont":"#E0E0E0","sfnt":"a"}'>Weather Data Source: <a href="https://sharpweather.com/weather_melbourne/30_days/">sharpweather.com/weather_melbourne/30_days/</a></div><script async src="https://static1.sharpweather.com/widgetjs/?id=ida217467359a5c"></script>
 
     <div class="clock" id="clock"></div>
     <div class="date" id="date"></div>
